--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,20 @@
-# list of all requirements
-dill >=0.3
-PyMySQL >=0.9
-ChemSpiPy >=2.0
-h5py >=2.10
-numpy >=1.18
-scipy >=1.4
-scikit-learn >=0.22
-overrides >=2.8
-pandas >=1.0
-matplotlib >=3.1
-seaborn >=0.10,1.0
-goatools >=1.0
-natsort >=7.0
-wget >=3.2
-altair >=4.0
-colorama >=0.4
-peewee >=3.13
-uniprot >=1.3
-toml >=0.10
-psutil >=5.7
-requests >=2.23
-terminaltables >=3.1
-cryptography >=2.8
-sshtunnel >=0.1
-colorama >=0.4
-py-cpuinfo >=5.0
-hurry.filesize >=0.9
-ipython >=7.12
-deprecated >=1.2
-typecheck-decorator >=1.3
-pytest >=5.3
-hypothesis >=5.5
-humanfriendly >=7.1
+natsort                >=7.0,<8.0
+numpy                  >=1.18,<2.0
+pandas                 >=1.0,<2.0
+requests               >=2.23,<3.0
+goatools[biochem]      >=1.0,<2.0
+uniprot[biochem]       >=1.3,<2.0
+PyMySQL[db]            >=0.9,<1.0
+peewee[db]             >=3.13,<4.0
+sshtunnel[db]          >=0.1,<1.0
+colorama[extra]        >=0.4,<1.0
+deprecated[extra]      >=1.2,<2.0
+overrides[extra]       >=2.8,<3.0
+psutil[extra]          >=5.7,<6.0
+toml[extra]            >=0.10,<1.0
+ipython[jupyter]       >=7.12,<8.0
+matplotlib[numeric]    >=3.1,<4.0
+scikit-learn[numeric]  >=0.22,<1.0
+scipy[numeric]         >=1.4,<2.0
+hypothesis[test]       >=5.5,<6.0
+pytest[test]           >=5.3,<6.0
