--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ natsort                >=7.0,<8.0
 numpy                  >=1.18,<2.0
 pandas                 >=1.0,<2.0
 requests               >=2.23,<3.0
+dill                   >=0.3,<1.0
 goatools[biochem]      >=1.0,<2.0
 uniprot[biochem]       >=1.3,<2.0
 PyMySQL[db]            >=0.9,<1.0
