--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,33 @@
-[build-system]
-requires = ["setuptools>=46.1", "wheel>=0.34"]
-
 [tox]
-envlist = 'py37,py38'
+minversion = 3.14
+extras = dev
+isolated_build = True
+envlist = py37
 
 [testenv]
-#wheel = true
-skipdist=True
-deps =
-      pytest
-	  hypothesis
-      wheel
+whitelist_externals = poetry
+skipdist = True
 commands =
-          pytest
-		  python setup.py sdist bdist_wheel
+    poetry check
+    poetry lock
+    poetry build
+    poetry install -v
+    poetry run pytest
+    - poetry run flake8 dscience
+    - poetry run flake8 docs
+    - poetry run flake8 --ignore=D100,D101,D102,D103,D104 tests
+    sphinx-build -b html docs docs/html
+#dscience clean
+#dscience sync
+# --cov
 
+[flake8]
+max-line-length = 100
+ignore = D212,D205,D410,D411,D200
+doctests = true
+exclude =  .git
+           __pycache__/
+           build/
+           dist/
+import-order-style = google
+docstring-convention = google
