--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,50 @@
+# Also see https://github.com/github/gitignore/blob/master/Python.gitignore
+# This is simpler and easier to understand
+
 # General
 .*
 ~*
 *~
 *#
 Thumbs.db
-**/resources/tmp
+*.bak
+*.swp
+tmp/
+
+# Let's keep these out of the repo
+*.log
+*.zip
+*.tar.gz
+*.tar
+*.z7
+*.exe
+*.msi
+*.pkg
+*.dll
+*.so
 
 # Python
+*.manifest
+*.spec
+docs/html/
 __pycache__/
+__pypackages__/
 *.py[cod]
 *$py.class
-*.so
 *.egg-info
+*.egg
 pip-wheel-metadata
-env/
 build/
 dist/
-downloads/
 eggs/
-lib/
-lib64/
-parts/
 sdist/
 docs/_build
+cython_debug/
 
 # Keep these:
 !/.gitignore
 !/.travis.yml
-
+!/.readthedocs.yml
+!/.dockerignore
+!/.editorconfig
+!/.pre-commit-config.yaml
