--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,3 +1,3 @@
 sphinx-rtd-theme     >=0.4.3,<1.0
 sphinx-autoapi       >=1.3,<2.0
-importlib_metadata   >=1.6,<1.7
+tomlkit              >=0.6,<1.0
