--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,20 +43,20 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
-	"Intended Audience :: Developers",
-	"Intended Audience :: Science/Research",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research",
     "Operating System :: OS Independent",
     "Topic :: Science/Research",
-	'Topic :: Software Development :: Libraries :: Python Modules',
-	'Topic :: Scientific/Engineering :: Bio-Informatics',
-	'Topic :: Scientific/Engineering :: Chemistry',
-	'Topic :: Scientific/Engineering :: Artificial Intelligence'
+    'Topic :: Software Development :: Libraries :: Python Modules',
+    'Topic :: Scientific/Engineering :: Bio-Informatics',
+    'Topic :: Scientific/Engineering :: Chemistry',
+    'Topic :: Scientific/Engineering :: Artificial Intelligence'
 ]
 include = [
-	"README.md",
-	"LICENSE.txt",
-	"CHANGES.md",
-	"dscience/resources"
+    "README.md",
+    "LICENSE.txt",
+    "CHANGES.md",
+    "dscience/resources"
 ]
 [tool.poetry.urls]
 build = "https://travis-ci.org/kokellab/dscience"
@@ -100,23 +100,29 @@ ipython                = {optional = true, version = "^7.13"}
 
 
 [tool.poetry.dev-dependencies]
-pre-commit            = "^2.3"
-pytest                = "^5.4"
-hypothesis            = "^5.8"
-pytest-cov            = "^2.8"
-sphinx                = "^3.0"
-sphinx-autoapi        = "^1.3"
-sphinx-rtd-theme      = "^0.4.3"
-mypy                  = "^0.750"
-flake8                = "^3.7"
-flake8-docstrings     = "^1.5"
-black                 = "=19.10b0"
-isort                 = "^4.3"
-#coverage              = {extras = ["toml"], version = "^5.1"}
-#tyrannosaurus         = "^0.0.2"
+pre-commit               = "^2.3"
+pytest                   = "^5.4"
+pytest-cov               = "^2.8"
+sphinx                   = "^3.0"
+sphinx-autoapi           = "^1.3"
+sphinx-rtd-theme         = "^0.4.3"
+mypy                     = "^0.750"
+flake8                   = "^3.7"
+flake8-docstrings        = "^1.5"
+black                    = "=19.10b0"
+isort                    = "^4.3"
+sphinx-autodoc-typehints = "^1.10"
 
 
 [tool.poetry.extras]
+docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autoapi"]
+dev  = [
+    "pre-commit", "pytest",
+    "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
+    "mypy",
+    "flake8", "flake8-docstrings",
+    "black", "isort"
+]
 numeric   = ["joblib", "scipy", "scikit-learn", "scikit-image"]
 plot      = ["matplotlib"]
 db        = ["PyMySQL", "peewee", "sshtunnel"]
@@ -124,23 +130,13 @@ biochem   = ["goatools", "uniprot"]
 console   = ["colorama", "psutil"]
 notebook  = ["ipython"]
 
-docs = [
-	"sphinx", "sphinx-rtd-theme", "sphinx-autoapi", "tomlkit"
-]
-dev = [
-	"pre-commit", "pytest", "hypothesis", "coverage",
-	"sphinx", "sphinx-autodoc-typehits", "autoapi",
-	"mypy",
-	"flake8", "flake8-docstrings",
-	"black", "isort"
-]
 all = [
-	"joblib", "scipy", "scikit-learn", "scikit-image",
-	"matplotlib",
-	"PyMySQL", "peewee", "sshtunnel",
-	"goatools", "uniprot",
-	"colorama", "psutil",
-	"ipython"
+    "joblib", "scipy", "scikit-learn", "scikit-image",
+    "matplotlib",
+    "PyMySQL", "peewee", "sshtunnel",
+    "goatools", "uniprot",
+    "colorama", "psutil",
+    "ipython"
 ]
 
 
